--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,6 +55,15 @@ body {
     page-break-inside: auto !important;
   }
   
+  img {
+    max-width: 100% !important;
+    height: auto !important;
+    display: block !important;
+    -webkit-print-color-adjust: exact !important;
+    color-adjust: exact !important;
+    print-color-adjust: exact !important;
+  }
+  
   .print-page {
     margin: 0 !important;
     padding: 5px !important;
